pull data to menu fragments from Firebase DB

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,9 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MapActivity" />
+        <activity android:name=".MenuActivity" />
 
-        <activity android:name=".MapActivity"/>
-        <activity android:name=".MenuActivity"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
@@ -26,6 +26,10 @@
         <activity
             android:name=".BarMActivity"
             android:label="@string/title_activity_bar_m"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TableActivity"
+            android:label="@string/title_activity_table"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
