--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,13 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:[4,5)'
 
     //Google play maps services
-    compile 'com.google.android.gms:play-services-maps:15.0.1'
-    compile 'com.google.android.gms:play-services-location:15.0.1'
-    compile 'com.google.android.gms:play-services-places:15.0.1'
-    compile 'de.codecrafters.tableview:tableview:2.8.0'
+    implementation 'com.google.android.gms:play-services-maps:15.0.1'
+    implementation 'com.google.android.gms:play-services-location:15.0.1'
+    implementation 'com.google.android.gms:play-services-places:15.0.1'
+    implementation 'de.codecrafters.tableview:tableview:2.8.0'
+
+    //circular image view
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
 
 }
