added picaso library for loading url image

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,9 @@ dependencies {
     implementation 'de.codecrafters.tableview:tableview:2.8.0'
 
     //circular image view
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+
+    implementation 'com.squareup.picasso:picasso:2.5.2'
 
 
 }
