--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,14 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.admin.metis">
 
+    <!-- ++++++++++++++++++++++++ User permissions +++++++++++++++++++++++++++-->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-feature android:name="android.hardware.location.gps" />
 
+    <!-- +++++++++++++++++++++++++ Application ++++++++++++++++++++++++++++++++-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -18,7 +19,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!-- Activities -->
+        <!-- ++++++++++++++++++++++ Activities ++++++++++++++++++++++++++++++++-->
+
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,25 +28,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity android:name=".MenuActivity" />
 
         <activity
-            android:name=".BarMActivity"
+            android:name=".BarMenuActivity"
             android:label="@string/title_activity_bar_m"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity android:name=".ChatActivity"/>
+
         <activity
             android:name=".TableActivity"
             android:label="@string/title_activity_table"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
-
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
+
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
@@ -58,26 +61,34 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MapActivity"
-            android:label="@string/title_activity_bar_m">
+        <activity
+            android:name=".MapActivity"
+            android:label="@string/title_activity_bar_m"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
 
-        <!--Services -->
-        <service android:name=".LocationService"
+        <!-- +++++++++++++++++++++++++++++Services++++++++++++++++++++++++++++++++++++++++++ -->
+        <service
+            android:name=".LocationService"
             android:enabled="true">
         </service>
 
-        <!-- Meta-Data -->
+        <!-- +++++++++++++++++++++++++++++Meta-Data+++++++++++++++++++++++++++++++++++++++++ -->
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
     </application>
 
