--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,16 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.admin.metis">
 
-    <!-- ++++++++++++++++++++++++ User permissions +++++++++++++++++++++++++++-->
+    <!-- ++++++++++++++++++++++++ User permissions +++++++++++++++++++++++++++ -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-feature android:name="android.hardware.location.gps" />
 
-    <!-- +++++++++++++++++++++++++ Application ++++++++++++++++++++++++++++++++-->
+    <!-- +++++++++++++++++++++++++ Application ++++++++++++++++++++++++++++++++ -->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,7 +20,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!-- ++++++++++++++++++++++ Activities ++++++++++++++++++++++++++++++++-->
+        <!-- ++++++++++++++++++++++ Activities ++++++++++++++++++++++++++++++++ -->
 
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -28,26 +29,20 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".MenuActivity" />
-
         <activity
             android:name=".BarMenuActivity"
             android:label="@string/title_activity_bar_m"
             android:theme="@style/AppTheme.NoActionBar" />
-
-        <activity android:name=".ChatActivity"/>
-
+        <activity android:name=".ChatActivity" />
         <activity
             android:name=".TableActivity"
             android:label="@string/title_activity_table"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name" />
-
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
@@ -60,12 +55,10 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MapActivity"
             android:label="@string/title_activity_bar_m"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
         <!-- +++++++++++++++++++++++++++++Services++++++++++++++++++++++++++++++++++++++++++ -->
         <service
@@ -73,19 +66,21 @@
             android:enabled="true">
         </service>
 
+        <service
+            android:name="com.example.admin.metis.MenuActivityTaskService"
+            android:stopWithTask="false">
+        </service>
+
         <!-- +++++++++++++++++++++++++++++Meta-Data+++++++++++++++++++++++++++++++++++++++++ -->
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
