--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
+    implementation 'me.dm7.barcodescanner:zxing:1.9'
+
 
 }
 apply plugin: 'com.google.gms.google-services'
