--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,9 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
 
+    //star image view
+    implementation 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
+
     implementation 'me.dm7.barcodescanner:zxing:1.9'
 
 
